# data_platform

./: Dockerfile  README.md  SKILL.md  build.sh  data.py  data_viewer.ipynb  docker-compose.yml  main.py  pyproject.toml  render.yaml  transacciones_Q3_2025.xlsx
app/: main.py
app/static/css/: style.css
data/: warehouse.db
data/lake/bronze/: transacciones_Q1_2025.parquet  transacciones_Q2_2025.parquet  transacciones_Q3_2025.parquet  transacciones_Q4_2025.parquet
data/lake/gold/: gold_category_summary.parquet  gold_kpis.parquet  gold_monthly_balance.parquet
data/lake/silver/: transacciones_Q1_2025.parquet  transacciones_Q2_2025.parquet  transacciones_Q3_2025.parquet  transacciones_Q4_2025.parquet
data/raw/: transacciones_Q1_2025.xlsx  transacciones_Q2_2025.xlsx  transacciones_Q4_2025.xlsx
db/: __init__.py  models.py  session.py
pipeline/: __init__.py  bronze.py  gold.py  load.py  silver.py
templates/: base.html  dashboard.html  export.html
