[project]
name = "data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.5.1",
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
